# logbook

./: .gitignore  LICENSE  README.md  pyproject.toml
logbook_gen/: __init__.py  ai_writer.py  categorizer.py  cli.py  enricher.py  git_reader.py  renderer.py
