[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logbook-gen"
version = "1.0.0"
description = "AI-assisted changelog generation from git commits and PR descriptions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "logbook contributors"}]
keywords = ["changelog", "git", "release-notes", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
github = ["httpx>=0.24"]

[project.scripts]
logbook = "logbook_gen.cli:cli"

[project.urls]
Homepage = "https://github.com/logbook-gen/logbook"
Issues = "https://github.com/logbook-gen/logbook/issues"
